src/objects/ServiceRequest__c.object
<CustomObject>
    <fields>
        <fullName>Property_Type__c</fullName>
        <description>Used for FRV CongaMerge Document.</description>
        <label>Property Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>residence</fullName>
                </value>
                <value>
                    <fullName>apartment</fullName>
                </value>
                <value>
                    <fullName>townhome</fullName>
                </value>
                <value>
                    <fullName>travel trailer</fullName>
                </value>
                <value>
                    <fullName>mobile home</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Basis__c</fullName>
        <inlineHelpText>Including tax</inlineHelpText>
        <label>Quote Basis</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Regional_Manager_Email__c</fullName>
        <label>Relationship Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Requested_Check_In__c</fullName>
        <formula>Opportunity__r.Estimated_Check_In__c</formula>
        <label>Requested Check-In</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Check_Out__c</fullName>
        <formula>Opportunity__r.Estimated_Check_Out__c</formula>
        <label>Requested Check-Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Return_Deposit_To_Formula__c</fullName>
        <description>Formula to Return Deposit To field on the claim. Replaces the Return Deposit To field on the service request.</description>
        <formula>CASE( Opportunity__r.Return_Deposit_To__c, &apos;Policyholder&apos;, &apos;Policyholder&apos;, &apos;Adjuster&apos;, &apos;Adjuster&apos;, &apos;None&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Return Deposit To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Deposit_To__c</fullName>
        <label>Return Deposit To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adjuster</fullName>
                </value>
                <value>
                    <fullName>Policyholder</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Searches_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Searches Lookup</label>
        <referenceTo>Searches__c</referenceTo>
        <relationshipLabel>Service Requests</relationshipLabel>
        <relationshipName>Service_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selected_Search__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Selected Search</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>Searches__c.Service_Request__c</valueField>
            </filterItems>
            <filterItems>
                <field>Searches__c.Selected__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Searches__c</referenceTo>
        <relationshipLabel>Service Requests (Selected Search)</relationshipLabel>
        <relationshipName>Service_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Septic_Holding_Tank_Pump_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Septic Holding Tank-Pump Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ServiceRequest__c</fullName>
        <formula>Id</formula>
        <label>ServiceRequest</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sewer_Cleanout_Paces_from_Trailer__c</fullName>
        <label>Sewer Cleanout Paces from Trailer</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sewer__c</fullName>
        <label>Sewer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>City sewer</fullName>
                </value>
                <value>
                    <fullName>Septic System</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skirting_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skirting Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Notes__c</fullName>
        <inlineHelpText>List any special notes. Are there existing septic, sewer, water lines we can connect to?  Is there a well that needs electric run to it?  Do any type of water or sewer lines need run?  Physically locate all items listed when possible, ask to see the items</inlineHelpText>
        <label>Special Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_Requirements__c</fullName>
        <inlineHelpText>Enter any special requirements such as: Number of Garages, Lot Size, Community Info, Fitness Center, etc.</inlineHelpText>
        <label>Special Requirements</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Request</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Searching</fullName>
                </value>
                <value>
                    <fullName>Pending Confirmation</fullName>
                </value>
                <value>
                    <fullName>Moved-In/Closed</fullName>
                </value>
                <value>
                    <fullName>Finders Fee</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Checked-In/Closed</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Lost Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>THA_Signed__c</fullName>
        <label>THA Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>THC_Signed__c</fullName>
        <label>THC Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TaskOwner__c</fullName>
        <description>We are Using this Filed in Process Builder for Assigning the Users for Hotel Tasks</description>
        <formula>IF( Initial_SR_being_worked_by__c != null, Initial_SR_being_worked_by__c ,  Opportunity__r.Hotel_Customer_Care_Specialist__c)</formula>
        <label>TaskOwner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Attempts__c</fullName>
        <label>Task Attempts</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attempt-2</fullName>
                </value>
                <value>
                    <fullName>Attempt-3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Temp_Utility_Pole_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Temp Utility Pole Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Temporary_Holding_Tank_Required__c</fullName>
        <label>Temporary Holding Tank Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_To_Make_Initial_Call__c</fullName>
        <formula>(Initial_Call_Date__c - CreatedDate) * 1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time To Make Initial Call</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Today_Date__c</fullName>
        <description>We are using this filed mapping in Echo sign Merge Fields Mapping</description>
        <formula>TODAY()</formula>
        <label>Today Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Cost_Formula__c</fullName>
        <formula>F_H_A_Cost__c  +  Markup__c  +  Average_Rent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Monthly Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Monthly_Cost__c</fullName>
        <label>Total Monthly Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_Loss__c</fullName>
        <formula>CASE (Opportunity__r.Type_of_Loss__c, &apos;Mold&apos;, &apos;Mold&apos;, &apos;Fire&apos;, &apos;Fire&apos;, &apos;Tornado&apos;, &apos;Tornado&apos;, &apos;Water&apos;, &apos;Water&apos;,&apos;Wind&apos;, &apos;Wind&apos;, &apos;CAT&apos; , &apos;CAT&apos; , &apos;Other&apos;)</formula>
        <label>Type of Loss</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Service__c</fullName>
        <label>Type of Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>15A</fullName>
                </value>
                <value>
                    <fullName>20A</fullName>
                </value>
                <value>
                    <fullName>30A</fullName>
                </value>
                <value>
                    <fullName>50A</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Space__c</fullName>
        <label>Type of Space</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <inlineHelpText>Last 6 digits</inlineHelpText>
        <label>VIN</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Water__c</fullName>
        <inlineHelpText>Is standard water faucet available?</inlineHelpText>
        <label>Water Available</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Winterization_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Winterization Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year_Home_Was_Built__c</fullName>
        <formula>Opportunity__r.Year_Home_Was_Built__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year Home Was Built</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Adults__c</fullName>
        <formula>Opportunity__r.Number_of_Adults__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Adults</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Bathrooms__c</fullName>
        <formula>Opportunity__r.Number_of_Bathrooms__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Bathrooms</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Bedrooms__c</fullName>
        <formula>Opportunity__r.Number_of_Bedrooms__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Bedrooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Children__c</fullName>
        <formula>Opportunity__r.Number_of_Children__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Children</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Rooms__c</fullName>
        <formula>Opportunity__r.Number_of_Rooms__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Rooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Service Request</label>
    <listViews>
        <fullName>All_Housing_Service_Requests</fullName>
        <columns>NAME</columns>
        <columns>Claim__c</columns>
        <columns>Opportunity__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ServiceRequest__c.Housing</value>
        </filters>
        <label>All Housing Service Requests</label>
    </listViews>
    <listViews>
        <fullName>Commercial_SR</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>Damaged_Property_City__c</columns>
        <columns>Damaged_Property_State__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Claim__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>012700000001W2z</value>
        </filters>
        <label>Commercial SR</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Furniture_Only</fullName>
        <columns>Opportunity__c</columns>
        <columns>NAME</columns>
        <columns>Claim__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>012700000001W31</value>
        </filters>
        <label>Furniture Only</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>New_SR_This_Week</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Damaged_Property_City__c</columns>
        <columns>Damaged_Property_State__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New SR This Week</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SR#-{000000}</displayFormat>
        <label>Service Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Requests</pluralLabel>
    <recordTypes>
        <fullName>FRV</fullName>
        <active>true</active>
        <description>For Fair Rental Value requests</description>
        <label>FRV</label>
    </recordTypes>
    <recordTypes>
        <fullName>Finders_Fees</fullName>
        <active>true</active>
        <label>Finders Fees</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hotel</fullName>
        <active>true</active>
        <description>For Hotel requests</description>
        <label>Hotel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Housing</fullName>
        <active>true</active>
        <description>For Housing requests</description>
        <label>Housing</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>